--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <main>
     <div class="slider-container">
       <div class="slides">
-        <div class="slide"><img src="livro1.jpeg" alt="Livro 1"></div>
-        <div class="slide"><img src="livro2.jpeg" alt="Livro 2"></div>
-        <div class="slide"><img src="livro3.jpeg" alt="Livro 3"></div>
+        <div class="slide"><img src="imagens/livro1.jpeg" alt="Livro 1"></div>
+        <div class="slide"><img src="imagens/livro2.jpeg" alt="Livro 2"></div>
+        <div class="slide"><img src="imagens/livro3.jpeg" alt="Livro 3"></div>
       </div>
       <button class="prev">&#10094;</button>
       <button class="next">&#10095;</button>
