--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <title>Cantinho do Leitor - Facilidade em leitura!</title>
 </head>
 
-<body>
+<body> 
+  
+  <div class="fundo-animado">
+    <div class="forma"></div>
+    <div class="forma"></div>
+    <div class="forma"></div>
+  </div>
+
   <header>
     <div class="toggle-container">
         <span class="toggle-text">Modo Escuro</span>
